
WIP      [SCRAPERS] Update MAME Offline Scraper database to version latest version 0.217.

WIP      [SCRAPERS] Persistent scraper cache browser. Ability to browse the stored scraper
         searches. Also, context menu to delete stored cached data.


[B]Advanced Emulator Launcher | version 0.9.10 | xx April 2020[/B]

WIP      [CORE] Support for Spines artwork. Support for BoxTextures artwork.
         Have a look at LaunchBox for other types of artwork that may be interesting.

WIP      [COLLECTIONS] Current way of storing the collection artwork, in a unified JSON file,
         is not good. Think of a good way to exporting collections (for example, store the
         artwork in a subdirectory). Possible way of solving filename collisions
         ROM_name_platform_fanart.png, platform is the short name and it's only used if
         there is filename amgibuity (same ROM name in different platforms in the collection).

WIP      [SCRAPERS] Improve the Offline Scraper. Improve the quality of the databases.

WIP      [SCRAPERS] Change the Offline Scraper format from XML to JSON. Include the new fields
         `parent` **string**, `region` **list of strings** and `language` **list of strings**.
         In general, write down the specifications of the new Offline Scraper database and
         have a look at NOTES.md for guidelines. Create the XML databases to be merged with the
         No-Intro/Redump DATs, also giving support to Extra ROMs (hacks, etc.).


[B]Advanced Emulator Launcher | version 0.9.9 | xx February 2020[/B]

WIP      [SCRAPERS] Add a delay to ScreenScraper scraper to avoid overloading.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2923181#pid2923181

FEATURE  [CORE] New Utility "Check Launcher ROMs sync status"

WIP      [CORE] New Utility "Check ROMs artwork image integrity"
         Sometimes the scrapers download wrong/corrupt data, or produce 0 sized files